# ytree

./: .codecov.yml  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG  CITATION.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  COPYING.txt  CREDITS  LICENSE  MANIFEST.in  README  README.md  __init__.py  ancestry_filter.py  arbor.py  bp.sh  environment.yml  fix-junit.py  halo_selector.py  halo_selectors.py  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py  simple_knot.py  simple_tree.py
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: ytree-issue-template.md
.github/workflows/: python-publish.yml
.travis_scripts/: download_test_data.sh
doc/: Makefile  README  rtd.txt
doc/source/: Analysis.rst  Arbor.rst  Changelog.rst  Conduct.rst  Data.rst  Developing.rst  Examples.rst  Fields.rst  Frames.rst  Help.rst  Installation.rst  Intro to ytree.ipynb  Loading.rst  Parallelism.rst  Plotting.rst  TreeFarm.rst  api_reference.rst  changelog.rst  conf.py  index.rst  reference.rst
doc/source/examples/: halo_age.py  halo_significance.py  (+3 more)
paper/: paper.bib  paper.md
scripts/: get_version.py
simple_tree/: __init__.py  ancestry_checker.py  ancestry_filter.py  ancestry_short.py  arbor.py  halo_selector.py  tree_farm.py  tree_node.py  tree_node_selector.py  utilities.py
tests/: conftest.py  test_analysis.py  test_arbors.py  test_consistent_trees_arbor.py  test_container.py  test_ct_arbor.py  test_derived_fields.py  test_examples.py  test_flake8.py  test_import.py  test_lhalotree.py  test_misc.py  test_parallel.py  test_parallel_nodes.py  test_parallel_tree_nodes.py  test_parallel_tree_nodes_1.py  test_parallel_tree_nodes_2.py  test_parallel_tree_nodes_3.py  test_parallel_tree_nodes_4.py  test_parallel_tree_nodes_5.py  test_parallel_tree_nodes_6.py  test_parallel_trees.py  test_pipelines.py  test_plot_examples.py  test_plots.py  test_rockstar_arbor.py  test_rs_arbor.py  test_saving.py  test_select_halos.py  test_treefarm.py  test_yt_selection.py  test_ytree_1x.py
tests/frontends/: test_ahf.py  test_ahf_1.py  test_ahf_2.py  test_ahf_3.py  test_consistent_trees.py  test_consistent_trees_1.py  test_consistent_trees_2.py  test_consistent_trees_3.py  test_consistent_trees_hdf5.py  test_consistent_trees_hdf5_1.py  test_consistent_trees_hdf5_2.py  test_consistent_trees_hdf5_3.py  test_consistent_trees_hdf5_4.py  test_csv.py  test_gadget4.py  test_gadget4_1.py  test_gadget4_2.py  test_lhalotree.py  test_lhalotree_hdf5.py  test_moria.py  test_rockstar.py  test_treefarm.py  test_treefarm_1.py  test_treefarm_2.py  test_treefrog.py
tests/parallel/: parallel_nodes.py  parallel_tree_nodes.py  parallel_trees.py  run_parallel_tree_nodes.py  test_halo_age.py  test_halo_significance.py  test_merger_accretion_rates.py  test_parallel_nodes.py  test_parallel_nodes_1.py  test_parallel_nodes_2.py  test_parallel_nodes_3.py  test_parallel_nodes_4.py  test_parallel_nodes_5.py  test_parallel_nodes_6.py  test_parallel_nodes_7.py  test_parallel_nodes_8.py  test_parallel_nodes_9.py  test_parallel_tree_nodes_1.py  test_parallel_tree_nodes_2.py  test_parallel_tree_nodes_3.py  test_parallel_tree_nodes_4.py  test_parallel_tree_nodes_5.py  test_parallel_tree_nodes_6.py  test_parallel_trees.py  test_parallel_trees_1.py  test_parallel_trees_2.py  test_parallel_trees_3.py  test_parallel_trees_4.py  test_parallel_trees_5.py  test_parallel_trees_6.py  test_parallel_trees_7.py
ytree/: __init__.py  ancestry_checker.py  arbor.py  config.py  halo_selector.py  tree_farm.py  tree_node.py  tree_node_selector.py  utilities.py
ytree/analysis/: __init__.py  analysis_operators.py  analysis_pipeline.py
ytree/arbor/: __init__.py  arbor.py  fields.py  io.py  misc.py  tree_node.py  tree_node_selector.py
ytree/data_structures/: __init__.py  arbor.py  detection.py  fields.py  io.py  load.py  misc.py  node_container.py  node_link.py  save_arbor.py  tree_container.py  tree_node.py  tree_node_selector.py
ytree/frontends/: __init__.py  api.py
ytree/testing/: __init__.py  arbor_test.py  example_script_test.py  parallel_test.py  utilities.py
ytree/tree_farm/: __init__.py  ancestry_checker.py  ancestry_filter.py  ancestry_short.py  halo_selector.py  tree_farm.py
ytree/utilities/: __init__.py  command_line.py  exceptions.py  io.py  loading.py  logger.py  misc.py  parallel.py  testing.py
ytree/visualization/: __init__.py  tree_plot.py
ytree/yt_frontend/: __init__.py  data_structures.py  fields.py  io.py
(+96 files in other folders)
