[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=7.0.1",
]

build-backend = "setuptools.build_meta"

[project]
name = "ytree"
description = "A Python package for analyzing tree data and especially merger trees."
authors = [
    { name = "Britton Smith", email = "brittonsmith@gmail.com" },
]
keywords = [
    "python",
    "data",
    "analysis",
    "astronomy",
    "astrophysics",
    "simulations",
    "merger trees",
    "trees",
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "configparser",
    "h5py",
    "more_itertools>=8.4",
    "numpy",
    "unyt>=3.0.1",
    "yt>=4.2",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
parallel = [
    "mpi4py",
]
dev = [
    "codecov",
    "pydot",
    "pytest>=3.6",
    "pytest-cov",
    "twine",
    "wheel",
    "sphinx",
    "sphinx_rtd_theme",
]
rtd = [
    "codecov",
    "pydot",
    "pytest>=3.6",
    "pytest-cov",
    "twine",
    "wheel",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://github.com/ytree-project/ytree"
Documentation = "https://ytree.readthedocs.io/en/stable/index.html"
Changelog = "https://ytree.readthedocs.io/en/latest/Changelog.html"
Repository = "https://github.com/ytree-project/ytree"
Issues = "https://github.com/ytree-project/ytree/issues"

[tool.ruff.lint]
# By default, Ruff enables Flake8's F rules, along with a subset of the E rules,
# omitting any stylistic rules that overlap with the use of a formatter, like
# ruff format
select = ["E4", "E7", "E9", "F"]
exclude = [
    "*/__init__.py"
]

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = [
    "LICENSE",
]

[tool.setuptools.packages.find]
include = [
    "ytree",
]

[tool.setuptools.dynamic]
version = {attr = "ytree.__version__"}
